@@ -289,7 +289,7 @@ This is the same as <TT>(active() &amp;&amp; visible() &amp;&amp;
  Non-zero if <A HREF="subclassing.html#draw"><TT>draw()</TT></A> needs to be called.  Actually this is a 
 bit field that the widget subclass can use to figure out what parts to 
 draw. 
-<H4><A name=Fl_Widget.parent>Fl_Widget *Fl_Widget::parent() const</A></H4>
+<H4><A name=Fl_Widget.parent>Fl_Group *Fl_Widget::parent() const</A></H4>
 Returns a pointer to the parent widget.  Usually this is a <A
 href=Fl_Group.html#Fl_Group> <TT>Fl_Group</TT></A> or <A
 HREF="Fl_Window.html#Fl_Window"><tt>Fl_Window</tt></a>.  Returns
